# lardataobj

./: CMakeLists.txt
Simulation/: AuxDetSimChannel.cxx  CMakeLists.txt  SimChannel.cxx  SimChannel.h  classes.h  classes_def.xml
lardataobj/: CMakeLists.txt
lardataobj/AnalysisBase/: BackTrackerMatchingData.h  CMakeLists.txt  Calorimetry.cxx  Calorimetry.h  CosmicTag.cxx  CosmicTag.h  FlashMatch.cxx  FlashMatch.h  MVAOutput.cxx  MVAOutput.h  MVAPIDResult.h  ParticleID.cxx  ParticleID.h  ParticleID_VariableTypeEnums.h  T0.cxx  T0.h  classes.h  classes_def.xml
lardataobj/MCBase/: CMakeLists.txt  MCBaseException.cxx  MCBaseException.h  MCDataHolder.h  MCHit.cxx  MCHit.h  MCHitCollection.cxx  MCHitCollection.h  MCLimits.h  MCShower.cxx  MCShower.h  MCStep.h  MCTrack.cxx  MCTrack.h  MCWire.cxx  MCWire.h  MCWireCollection.cxx  MCWireCollection.h  classes.h  classes_def.xml
lardataobj/OpticalDetectorData/: CMakeLists.txt  ChannelData.h  ChannelDataGroup.h  FIFOChannel.h  OpticalRawDigit.h  OpticalTypes.h  PMTTrigger.h  classes.h  classes_def.xml
lardataobj/RawData/: AuxDetDigit.cxx  AuxDetDigit.h  BeamInfo.cxx  BeamInfo.h  CMakeLists.txt  DAQHeader.cxx  DAQHeader.h  ExternalTrigger.cxx  ExternalTrigger.h  OpDetPulse.cxx  OpDetPulse.h  OpDetWaveform.h  RDTimeStamp.h  RawDigit.cxx  RawDigit.h  TriggerData.cxx  TriggerData.h  classes.h  classes_def.xml  raw.cxx  raw.h
lardataobj/RecoBase/: CMakeLists.txt  Cluster.cxx  Cluster.h  Edge.cxx  Edge.h  EndPoint2D.cxx  EndPoint2D.h  Event.cxx  Event.h  Hit.cxx  Hit.h  MCSFitResult.h  OpFlash.cxx  OpFlash.h  OpHit.cxx  OpHit.h  PCAxis.cxx  PCAxis.h  PFParticle.cxx  PFParticle.h  PFParticleMetadata.cxx  PFParticleMetadata.h  PointCharge.h  RecoBase.dox  Seed.cxx  Seed.h  Shower.cxx  Shower.h  Slice.cxx  Slice.h  SpacePoint.cxx  SpacePoint.h  Track.cxx  Track.h  TrackFitHitInfo.h  TrackHitMeta.cxx  TrackHitMeta.h  TrackTrajectory.cxx  TrackTrajectory.h  TrackTrajectory.tcc  (+17 more)
lardataobj/RecoBase/AssnsDicts/: classes.h  classes_def.xml
lardataobj/RecoBase/TrackingDicts/: classes_def.xml
lardataobj/Simulation/: AuxDetHit.h  AuxDetSimChannel.cxx  AuxDetSimChannel.h  BeamGateInfo.h  BeamTypes.h  CMakeLists.txt  GeneratedParticleInfo.h  OpDetBacktrackerRecord.cxx  OpDetBacktrackerRecord.h  SimChannel.cxx  SimChannel.h  SimDriftedElectronCluster.h  SimEnergyDeposit.h  SimPhotons.cxx  SimPhotons.h  SupernovaTruth.cxx  SupernovaTruth.h  classes.h  classes_def.xml  sim.h
lardataobj/Utilities/: BitMask.h  BitMask.tcc  CMakeLists.txt  DataIOmanip.h  FlagSet.h  FlagSet.tcc  LazyVector.h  VectorMap.h  sparse_vector.h
test/: CMakeLists.txt  test_donothing.fcl
test/RawData/: CMakeLists.txt  RawDigit_test.cc  raw_test.cc
test/RecoBase/: CMakeLists.txt  Cluster_test.cc  Edge_test.cc  Hit_test.cc  PointCharge_test.cc  TrackTrajectory_test.cc  TrajectoryPointFlags_test.cc  Trajectory_test.cc  Wire_test.cc
test/Utilities/: CMakeLists.txt  FlagSet_test.cc  LazyVector_test.cc  sparse_vector_test.cc
ups/: product_deps
